package com.tricol.manage_supplier_orders.order.domain.enums;

public enum OrderStatus {
    WAITING, VALIDATED, DELIVERED, CANCELLED
}
