package com.tricol.manage_supplier_orders.stock.domain.enums;

public enum MovementType {
    ENTRY,
    EXIT,
    ADJUSTMENT
}