package com.tricol.manage_supplier_orders.stock.domain.enums;

public enum StockValuationMethod {

   CUMP, FIFO
}
